# btc-toolkit

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md
assets/icons/: README.md
src/: config.rs  dashboard.rs  device_detail_view.rs  errors.rs  health.rs  main.rs  main_view.rs  network_config.rs  scanning_view.rs  sorting.rs  theme.rs  ui_helpers.rs
src/network/: full_fetch.rs  mod.rs  nmap_range.rs  scanner.rs
src/scanning/: message.rs  mod.rs  table.rs  tabs.rs
src/theme/: buttons.rs  colors.rs  containers.rs  icons.rs  mod.rs  padding.rs  spacing.rs  typography.rs
