[package]
name = "btc-toolkit"
version = "0.1.0"
edition = "2024"
description = "GUI tool for scanning local network for BTC ASIC Miners"
authors = ["Daniel Sokil <dtechtours@gmail.com>"]

[dependencies]
iced = "0.13"
opener = "0.7"
mimalloc = { version = "0.1", features = ["secure"] }
tokio = { version = "1.45", features = ["full", "rt-multi-thread"] }
# asic-rs = { git = "https://github.com/b-rowan/asic-rs.git" }
asic-rs = { git = "https://github.com/s0kil/asic-rs.git", branch = "btminer-v3" }
# asic-rs = { path = "/home/danielsokil/Lab/b-rowan/asic-rs" }

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
