[package]
name = "btc-toolkit"
version = "0.1.0"
edition = "2024"
description = "GUI tool for scanning local network for BTC ASIC Miners"
authors = ["Daniel Sokil <dtechtours@gmail.com>"]

[dependencies]
iced = "0.13"
opener = "0.8"
mimalloc = { version = "0.1", features = ["secure"] }
tokio = { version = "1.47", features = ["full", "rt-multi-thread"] }
asic-rs = { git = "https://github.com/256-Foundation/asic-rs", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
