[package]
name = "btc-toolkit"
version = "0.1.0"
edition = "2024"
description = "GUI tool for scanning local network for BTC ASIC Miners"
authors = ["Daniel Sokil <dtechtours@gmail.com>"]

[dependencies]
iced = { version = "0.13", features = ["svg", "tokio", "lazy", "debug"] }
opener = "0.8"
mimalloc = { version = "0.1" }
tokio = { version = "1.48", features = ["full"] }
asic-rs = { git = "https://github.com/256-Foundation/asic-rs", branch = "master" }
# asic-rs = { git = "https://github.com/b-rowan/asic-rs", branch = "discovery-bugs" }
# asic-rs = { path = "/home/danielsokil/Lab/256-Foundation/asic-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
